--- a/architecture/src/main/AndroidManifest.xml
+++ b/architecture/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.wiz.architecture">
 
-    <application
-        />
+    <application />
 
 </manifest>
